--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: RISHABH & BROTHERS SERVICES
 url: "https://raigroups.in"
-baseurl: ""  # Leave empty for root
+baseurl: ""  
 enforce_ssl: raigroups.in
